imp: changed logic for get task list
