# storage/api-docs/api-docs.json
@@ -459,7 +459,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "app/Http/Controllers/TaskController"
+                                                "type": "string"
                                             }
                                         }
                                     },
@@ -484,7 +484,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ]
             }
         },
         "/api/create": {
